objects/VoiceCall.object
<CustomObject>
    <fields>
        <fullName>Call_Reason__c</fullName>
        <label>Call Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Voice Calls</relationshipLabel>
        <relationshipName>Voice_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Voice Calls</relationshipLabel>
        <relationshipName>Voice_Calls</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>My_VoiceCalls</fullName>
        <filterScope>Mine</filterScope>
        <label>MyVoiceCalls</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>